@@ -109,3 +109,9 @@ fun x : ?A => x === x
      : forall x : ?A, x = x
 where
 ?A : [x : ?A |- Type] (x cannot be used)
+{0, 1}
+     : nat * nat
+{0, 1, 2}
+     : nat * (nat * nat)
+{0, 1, 2, 3}
+     : nat * (nat * (nat * nat))
